# ragathon

./: .env.template  .gitignore  .pre-commit-config.yaml  README.md  evaluation_Judge_score.py  pyproject.toml
data/: models.py
data/gdpr-handbook/processed/: handbook-cleaned-questions.json  handbook-cleaned.json  handbook-cleaned.md
data/pipelines/naive-128-overlap-50-retriever-bm25-generator-gpt4o-v1/: config.json  handbook-cleaned-chunked-naive.json  result.jsonl
data/pipelines/naive-128-overlap-50-retriever-bm25-generator-gpt4o-v1/indices/handbook-cleaned/: corpus.jsonl  corpus.mmindex.json  data.csc.index.npy  indices.csc.index.npy  indptr.csc.index.npy  params.index.json  vocab.index.json
src/ragathon/: config.py  evaluation.py  evaluation_Judge_Final.py  evaluation_Judge_Last.py  evaluation_Judge_score.py  evaluation_fast.py
src/ragathon/chunking/: paragraph.py  sentence.py  token.py
src/ragathon/data/: models.py
src/ragathon/indexing/: __init__.py  bm25.py  vector.py
src/ragathon/llms/: __init__.py  azure.py  common.py
src/ragathon/parsers/: markdown.py
src/ragathon/pipelines/: common.py  sparse_bm25.py  sparse_vector.py  vector.py
src/ragathon/utils/: strings.py
tests/unit/: test_danish_sentence_splitter.py  test_markdown_parser.py  test_markdown_section.py  test_naive_token_based_splitter.py  test_paragraph_splitter.py
tools/: eval_retriever.py
