[project]
name = "ragathon"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "Omar Ali Sheikh", email = "omsh@atp.dk"},
    {name = "Hansotto", email = "hansotto.kristiansen@gmail.com"},
]
dependencies = [
    "loguru>=0.7.2",
    "azure-identity>=1.17.1",
    "openai>=1.35.10",
    "seaborn>=0.13.2",
    "pandas>=2.2.2",
    "openpyxl>=3.1.5",
    "pyarrow>=16.1.0",
    "mammoth>=1.8.0",
    "markdownify>=0.12.1",
    "typing-extensions>=4.12.2",
    "nltk>=3.8.1",
    "aiofiles>=24.1.0",
    "anyio>=4.4.0",
    "pydantic-settings>=2.3.4",
    "aiohttp>=3.9.5",
    "instructor>=1.3.4",
    "bm25s>=0.1.7",
    "pytrec-eval>=0.5",
    "click-params>=0.5.0",
    "annoy>=1.17.3",
    "pydantic>=2.8.2",
]
requires-python = "==3.11.*"
readme = "README.md"
license = {text = "MIT"}

[project.optional-dependencies]
dev = [
    "pyre-check>=0.9.22",
    "jupyterlab>=4.2.3",
    "ipywidgets>=8.1.3",
    "pytest>=8.2.2",
    "pre-commit>=3.7.1",
    "pickleshare>=0.7.5",
    "seaborn>=0.13.2",
]
[tool.pdm]
distribution = false

[tool.pdm.scripts]
tests = "pytest -vv -s tests"
convert-word-to-markdown = "python -m tools.convert_word_to_markdown"
parse-markdown = "python -m tools.parse_markdown"
create-questions = "pdm run python -m tools.create_questions"
create-reference-answers = "pdm run python -m tools.create_reference_answers"
chunk = "pdm run python -m tools.chunk"
map-questions-to-chunks = "pdm run python -m tools.map_questions_to_chunks"
create-vector-index = "pdm run python -m tools.create_vector_index"
create-bm25-index = "pdm run python -m tools.create_bm25_index"
eval-retriever = "pdm run python -m tools.eval_retriever"

[tool.pytest.ini_options]
filterwarnings = [
    "ignore:Jupyter is migrating its paths:DeprecationWarning",
]
